--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
 
     <div class="load-more-wrapper">
       <button class="load-more is-hidden">Load more</button>
-      <div class="loader is-hidden"></div>
+      <span class="loader is-hidden"></span>
     </div>
 
-    <div class="loader is-hidden"></div>
+    <span class="loader is-hidden"></span>
 
     <script type="module" src="./main.js"></script>
   </body>
